--- a/views/manual.ejs
+++ b/views/manual.ejs
@@ -20,13 +20,23 @@
 <hr>
 <br>
 <h2 id="information">Write simple imformation of Nodvel</h2>
-<div style="white-space: pre-line;">1. I think there's no one that don't know about 'Title', right?
+<img src="/simpleinfo.png">
+<div style="white-space: pre-line;">Haha, this is just picture for guidance. Did you really click this?
+    1. I think there's no one that don't know about 'Title', right?
     2. 'Preview of story' is story introduction of Nodvel. Not all of story, just a little.
     3. You should choose 'Main genre' in the select. I know you can make SF horror romance story, but you can't choose all. Just main "ONE" genre.</div>
 <hr>
 <br>
+<h2 id="information">Upload images</h2>
+<img src="/upload.png">
+<div style="white-space: pre-line;">1. First, find image file. Only you can choose is ".jpg(.jpeg)" or ".png" file.
+    2. And push upload button. This is easy, right?
+    3. If you upload wrong file, push delete button. It will delete file.</div>
+<hr>
+<br>
 <h2 id="make">Make scene of Nodvel</h2>
 <div style="white-space: pre-line;">When you first make Nodvel. It will be unactive, it mean, other user can't see your nodvel until you push 'Finish writing' butten. So, if you want to let people see Nodvel. Must push butten.</div>
+<img src="/div,page,text.png">
 <h3 id="divergence">1. 'Divergence' mean time line of story.</h3>
 <div style="white-space: pre-line;">You must write "Number" as divergence, like '1', '2' or '13'. Anything but only "Number". Remember this. For example, if you make player choose 1 of 2 answer and that choice divide time line. It mean, there will be 2 divergence. 'Divergence' is necessary thing. You must write down. Be care about divergence, wrong divergence mean wrong time line.</div>
 <br>
@@ -34,20 +44,29 @@
 <div style="white-space: pre-line;">Page is also "Number", and recommended "Ascending" number of story procedure(1 -> 2 -> 3, like this). In one divergence, page that have same page number can't be exist. 'Page' is also necessay. You must write down. Like divergence, page is important. Please think before write.</div>
 <br>
 <h3 id="nextDivergence">3. 'Next divergence' mean divergence of next page.</h3>
-<div style="white-space: pre-line;">To link page. Nodvel demand you to think about next page. For example, if i write one divergence story, next divergence must be same. Other thing is same as 'Divergence'.</div>
+<div style="white-space: pre-line;">To link page. Nodvel demand you to think about next page. For example, if i write only one divergence story, next divergence must be same.</div>
+<div style="white-space: pre-line; color: brown">If you use 'choice', you don't need to fill in 'Next divergence'. Cause 'choice' will link to other page.</div>
 <br>
 <h3 id="nextPage">4. 'Next page' is literally page number of next scene.</h3>
 <div style="white-space: pre-line;">Same purpose with 'Next divergence'. If you want, you can link to past. When 'Page' is 15 and 'Next page' is 10, you can make player go to back scene. Other thing is also similar with 'Page'.</div>
+<div style="white-space: pre-line; color: brown">If you use 'choice', you don't need to fill in 'Next page' like 'Next divergence. Cause 'choice' will link to other page.</div>
 <br>
-<h3 id="memo">5. 'Memo' is simple comment about scene.</h3>
-<div style="white-space: pre-line;">Not a necessary thing. When you search certain scene, server use 'memo' for searching. You can use as kind of bookmark.</div>
+<h3 id="text">5. 'Text' is character's words.</h3>
+<div style="white-space: pre-line;">You must type name with words to show who is saying. For example, "Donald Trump: I like racism!". Who is Donald Trump, anyway? And replaceing line is not allowed. Please, mind this. 'Text' also used for searching.</div>
+<div style="white-space: pre-line; color: brown">If you use 'choice', you don't need to fill in 'text'. You can, but 'choice' will block 'text'.</div>
 <br>
+<img src="/image,memo.png">
 <h3 id="images">6. 'Character' and 'Background' is image of it's own name.</h3>
 <div style="white-space: pre-line;">Not a necessary thing. Before setting image, you must upload files first. After that, you can select image. Maximum number of 'character' is 4, minimum is 0. Yes, you can set all 'character' as "none". You can set 'background' also as "none" and it will make background black. If you set 'Choice' and 'Character' together, 'choice' has priority. It will go up.</div>
+<h4>About image size</h4>
+<div style="white-space: pre-line; color: brown">If ratio is different, program will fit it in, but can be strange. So please check ratio.</div>
+<div style="white-space: pre-line; color: brown">Character image width : height ratio = 1 : 2</div>
+<div style="white-space: pre-line; color: brown">Background image width : height ratio = 11 : 7</div>
 <br>
-<h3 id="text">7. 'Text' is character's words.</h3>
-<div style="white-space: pre-line;">You must type name with words to show who is saying. For example, "Donald Trump: I like racism!". Who is Donald Trump, anyway? And replaceing line is not allowed. Please, mind this. 'Text' also used for searching.</div>
+<h3 id="memo">7. 'Memo' is simple comment about scene.</h3>
+<div style="white-space: pre-line;">Not a necessary thing. When you search certain scene, server use 'memo' for searching. You can use as kind of bookmark.</div>
 <br>
+<img src="/choice.png">
 <h3 id="choice">8. 'Choice' make player choose.</h3>
 <div style="white-space: pre-line;">If your friend say "Hey dude! Wanna go party tonight?" you should choose what to say. 'choice' is same thing. Not only words, you can use for everything that you want. Each 'choice' have text, next divergence and next page. I believe you know already. Maximum number of 'choice' is 4, minimum is 0. Same as 'character'.</div>
 <br>
@@ -60,10 +79,13 @@
     <li>text -> layer 3</li>
     <li>choice -> layer 4</li>
 </ul>
-<hr>
-<br>
 <h2 id="rewrite">When you rewrite Nodvel</h2>
 <div style="white-space: pre-line;">Rewriting is similar with writing. So if you rewrite your Nodvel, it will be unactive, same as first writing. Rewriting will go on until you push 'Finish writing' butten. You can do this anytime and someone who watching Nodvel will be out automatically.</div>
+<hr>
+<br>
+<h3>Example of page</h3>
+<img src="/악마.png">
+<img src="/선택지.png">
 <hr>
 <br>
 
