--- a/views/searchnodvel.ejs
+++ b/views/searchnodvel.ejs
@@ -2,11 +2,11 @@
 
 <h2>Page list of <%= title %></h2>
     <div id="none" style="height: 800px; overflow: auto;">
-        <table style="table-layout: auto;" class="table table-striped">
+        <table style="table-layout: fixed;" class="table table-striped">
             <thead>
                 <tr>
                     <th style="width: 60px;">Count</th>
-                    <th style="width: 50px;">Divergence</th>
+                    <th style="width: 80px;">Divergence</th>
                     <th style="width: 50px;">Page</th>
                     <th style="width: 300px;">Text</th>
                     <th style="width: 300px;">Memo</th>
