--- a/views/upload.ejs
+++ b/views/upload.ejs
@@ -6,7 +6,7 @@
         <option value="character" selected>character</option>
     </select>
     <input type="file" name="file" class="filestyle" accept=".jpeg, .jpg, .png" style="float: left;" required>
-    <input type="submit" class="btn btn-info" style="float: left;">
+    <input type="submit" class="btn btn-info" style="float: left;" value="Upload">
 </form>
 <br>
 <hr>
@@ -28,7 +28,7 @@
         <option value="background" selected>background</option>
     </select>
     <input type="file" name="file" class="filestyle" accept=".jpeg, .jpg, .png" style="float: left;" required>
-    <input type="submit" class="btn btn-info" style="float: left;">
+    <input type="submit" class="btn btn-info" style="float: left;" value="Upload">
 </form>
 <br>
 <hr>
