--- a/views/writed.ejs
+++ b/views/writed.ejs
@@ -10,7 +10,7 @@
     <h1 style="color: red;">Warning! There's any scene that linked to this page!</h1>
     <br>
 <% } %>
-<h1><%= contents.title %></h1>
+<h1 style="overflow: hidden; white-space: nowrap; text-overflow: ellipsis;"><%= contents.title %></h1>
 <h2>Divergence - <%= pagecontents.divergence %></h2>
 <h2>Page - <%= pagecontents.page %></h2>
 <% if(pagecontents.nextDivergence) { %>
