--- a/views/writing.ejs
+++ b/views/writing.ejs
@@ -1,6 +1,6 @@
 <% include _header %>
 
-<h1><%= contents.title %></h1>
+<h1 style="overflow: hidden; white-space: nowrap; text-overflow: ellipsis;"><%= contents.title %></h1>
 <br>
 <hr>
 <br>
