--- a/views/nodvel.ejs
+++ b/views/nodvel.ejs
@@ -1,6 +1,6 @@
 <% include _header %>
 
-<h1><%= contents.title %></h1>
+<h1 style="overflow: hidden; white-space: nowrap; text-overflow: ellipsis;"><%= contents.title %></h1>
 <hr>
 <h3>Writed by <%= contents.writer %></h3>
 <br>
