--- a/views/manual.ejs
+++ b/views/manual.ejs
@@ -36,7 +36,7 @@
 <br>
 <h2 id="make">Make scene of Nodvel</h2>
 <div style="white-space: pre-line;">When you first make Nodvel. It will be unactive, it mean, other user can't see your nodvel until you push 'Finish writing' butten. So, if you want to let people see Nodvel. Must push butten.</div>
-<img src="/div,page,text.png">
+<img src="/div_page_text.png">
 <h3 id="divergence">1. 'Divergence' mean time line of story.</h3>
 <div style="white-space: pre-line;">You must write "Number" as divergence, like '1', '2' or '13'. Anything but only "Number". Remember this. For example, if you make player choose 1 of 2 answer and that choice divide time line. It mean, there will be 2 divergence. 'Divergence' is necessary thing. You must write down. Be care about divergence, wrong divergence mean wrong time line.</div>
 <br>
@@ -55,7 +55,7 @@
 <div style="white-space: pre-line;">You must type name with words to show who is saying. For example, "Donald Trump: I like racism!". Who is Donald Trump, anyway? And replaceing line is not allowed. Please, mind this. 'Text' also used for searching.</div>
 <div style="white-space: pre-line; color: brown">If you use 'choice', you don't need to fill in 'text'. You can, but 'choice' will block 'text'.</div>
 <br>
-<img src="/image,memo.png">
+<img src="/image_memo.png">
 <h3 id="images">6. 'Character' and 'Background' is image of it's own name.</h3>
 <div style="white-space: pre-line;">Not a necessary thing. Before setting image, you must upload files first. After that, you can select image. Maximum number of 'character' is 4, minimum is 0. Yes, you can set all 'character' as "none". You can set 'background' also as "none" and it will make background black. If you set 'Choice' and 'Character' together, 'choice' has priority. It will go up.</div>
 <h4>About image size</h4>
@@ -84,8 +84,8 @@
 <hr>
 <br>
 <h3>Example of page</h3>
-<img src="/악마.png">
-<img src="/선택지.png">
+<img src="/demon.png">
+<img src="/select.png">
 <hr>
 <br>
 
